--- a/privacy.html
+++ b/privacy.html
@@ -241,8 +241,8 @@
 
     <p>
         Email:
-        <a href="mailto:support@redactpdf.app">
-            support@redactpdf.app
+        <a href="mailto:tkr_1203@outlook.com">
+            tkr_1203@outlook.com
         </a>
     </p>
 
