--- a/support.html
+++ b/support.html
@@ -1,199 +1,345 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support - RedactPDF</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                         Roboto, Helvetica, Arial, sans-serif;
-            background-color: #f7f8fa;
-            color: #333;
-            line-height: 1.6;
-        }
+<title>Support - RedactPDF</title>
 
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            background: #ffffff;
-            padding: 32px 40px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.06);
-        }
+<style>
+body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                 Roboto, Helvetica, Arial, sans-serif;
+    background-color: #f7f8fa;
+    color: #333;
+    line-height: 1.6;
+}
 
-        h1 {
-            text-align: center;
-            margin-bottom: 8px;
-        }
+.container {
+    max-width: 900px;
+    margin: 40px auto;
+    background: #ffffff;
+    padding: 32px 40px;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.06);
+}
 
-        .subtitle {
-            text-align: center;
-            color: #666;
-            font-size: 15px;
-            margin-bottom: 30px;
-        }
+h1 {
+    text-align: center;
+    margin-bottom: 8px;
+}
 
-        h2 {
-            margin-top: 32px;
-            border-bottom: 1px solid #eee;
-            padding-bottom: 6px;
-        }
+.subtitle {
+    text-align: center;
+    color: #666;
+    font-size: 15px;
+    margin-bottom: 30px;
+}
 
-        p {
-            margin: 12px 0;
-        }
+h2 {
+    margin-top: 32px;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 6px;
+}
 
-        ul {
-            padding-left: 22px;
-        }
+h3 {
+    margin-top: 20px;
+}
 
-        li {
-            margin-bottom: 6px;
-        }
+p {
+    margin: 12px 0;
+}
 
-        .contact-box {
-            background-color: #f2f5f9;
-            padding: 20px;
-            border-radius: 8px;
-            margin-top: 20px;
-        }
+ul {
+    padding-left: 22px;
+}
 
-        a {
-            color: #007AFF;
-            text-decoration: none;
-        }
+li {
+    margin-bottom: 6px;
+}
 
-        a:hover {
-            text-decoration: underline;
-        }
+.step {
+    background: #f1f5f9;
+    border-left: 4px solid #007AFF;
+    padding: 12px 14px;
+    margin: 12px 0;
+    border-radius: 6px;
+}
 
-        footer {
-            margin-top: 50px;
-            text-align: center;
-            font-size: 13px;
-            color: #888;
-        }
+.tip {
+    background: #ecfeff;
+    border-left: 4px solid #06b6d4;
+    padding: 12px;
+    margin: 12px 0;
+    border-radius: 6px;
+}
 
-        hr {
-            border: none;
-            border-top: 1px solid #eee;
-            margin: 30px 0;
-        }
-    </style>
+.warning {
+    background: #fff7ed;
+    border-left: 4px solid #f97316;
+    padding: 12px;
+    margin: 12px 0;
+    border-radius: 6px;
+}
+
+.contact-box {
+    background-color: #f2f5f9;
+    padding: 20px;
+    border-radius: 8px;
+    margin-top: 20px;
+}
+
+a {
+    color: #007AFF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+footer {
+    margin-top: 50px;
+    text-align: center;
+    font-size: 13px;
+    color: #888;
+}
+
+hr {
+    border: none;
+    border-top: 1px solid #eee;
+    margin: 30px 0;
+}
+</style>
 </head>
 
 <body>
 
 <div class="container">
 
-    <h1>RedactPDF Support</h1>
+<!-- Header -->
 
-    <div class="subtitle">
-        We're here to help you protect your PDF privacy
-    </div>
+<h1>RedactPDF Support Center</h1>
 
-    <p>
-        Welcome to the official support page for <strong>RedactPDF</strong>.
-        If you have any questions, issues, or suggestions,
-        please contact us using the information below.
-    </p>
+<div class="subtitle">
+    Protect Your Privacy · Secure Your Documents
+</div>
 
-    <hr>
+<p>
+Welcome to the official support center of <strong>RedactPDF</strong>.
+Here you can learn how to use the app, manage redaction rules,
+and contact our support team.
+</p>
 
-    <h2>Contact Us</h2>
+<hr>
 
-    <div class="contact-box">
-        <p><strong>Email Support</strong></p>
+<!-- About -->
 
-        <p>
-            <a href="mailto:tkr_1203@outlook.com">
-                tkr_1203@outlook.com
-            </a>
-        </p>
+<h2>About RedactPDF</h2>
 
-        <p>
-            We usually respond within 24–48 hours.
-        </p>
-    </div>
+<p>
+RedactPDF is a professional privacy protection tool designed
+to help you automatically and manually remove sensitive information
+from PDF documents.
+</p>
 
-    <hr>
+<ul>
+    <li>Automatic sensitive data detection</li>
+    <li>Manual redaction mode</li>
+    <li>Region-based rules</li>
+    <li>Undo / Redo support</li>
+    <li>Secure export</li>
+</ul>
 
-    <h2>Frequently Asked Questions (FAQ)</h2>
+<hr>
 
-    <h3>Why can't I open or load a PDF file?</h3>
-    <p>
-        Please make sure your PDF file is not corrupted
-        and that you are using the latest version of RedactPDF.
-        Try reopening the app and importing the file again.
-    </p>
+<!-- Getting Started -->
 
-    <h3>Does RedactPDF upload my files?</h3>
-    <p>
-        No. All PDF processing is done locally on your device.
-        Your files are never uploaded to any server.
-    </p>
+<h2>Getting Started</h2>
 
-    <h3>Is my data secure?</h3>
-    <p>
-        Yes. RedactPDF does not collect or store any personal data.
-        Your documents remain on your device at all times.
-    </p>
+<div class="step">1. Tap <strong>Import</strong> to load a PDF file.</div>
+<div class="step">2. Choose Automatic or Manual mode.</div>
+<div class="step">3. Select applicable regions.</div>
+<div class="step">4. Tap <strong>Detect</strong> to scan.</div>
+<div class="step">5. Tap <strong>Apply</strong> to redact.</div>
+<div class="step">6. Tap <strong>Export</strong> to save.</div>
 
-    <h3>Can I recover redacted content?</h3>
-    <p>
-        Once a PDF is exported after redaction,
-        the removed content cannot be recovered.
-        Please review your document carefully before exporting.
-    </p>
+<hr>
 
-    <h3>Why is auto detection not finding my text?</h3>
-    <p>
-        Some PDFs are scanned images and do not contain
-        selectable text. In this case, please use
-        manual redaction mode.
-    </p>
+<!-- Modes -->
 
-    <hr>
+<h2>Redaction Modes</h2>
 
-    <h2>Feature Requests & Feedback</h2>
+<h3>Automatic Mode</h3>
 
-    <p>
-        We value your feedback.
-        If you have ideas for new features or improvements,
-        feel free to email us.
-    </p>
+<p>
+Automatically detects:
+</p>
 
-    <p>
-        Your suggestions help make RedactPDF better.
-    </p>
+<ul>
+    <li>ID numbers</li>
+    <li>Phone numbers</li>
+    <li>Email addresses</li>
+    <li>Bank cards</li>
+</ul>
 
-    <hr>
+<h3>Manual Mode</h3>
 
-    <h2>System Requirements</h2>
+<p>
+Draw directly on the document to hide selected areas.
+</p>
 
-    <ul>
-        <li>iOS 15.0 or later</li>
-        <li>Compatible with iPhone and iPad</li>
-        <li>Internet connection is not required</li>
-    </ul>
+<div class="tip">
+Manual mode is recommended when automatic detection misses content.
+</div>
 
-    <hr>
+<hr>
 
-    <h2>Legal</h2>
+<!-- Region -->
 
-    <p>
-        For privacy-related information,
-        please review our
-        <a href="privacy.html">Privacy Policy</a>.
-    </p>
+<h2>Region & Rule Management</h2>
 
-    <footer>
-        © 2026 RedactPDF. All rights reserved.
-    </footer>
+<p>
+To reduce false detection, RedactPDF allows you to enable rules
+based on regions.
+</p>
+
+<ul>
+    <li>China</li>
+    <li>USA</li>
+    <li>Japan</li>
+    <li>Korea</li>
+    <li>France</li>
+    <li>Germany</li>
+    <li>Spain</li>
+    <li>India</li>
+    <li>Philippines</li>
+    <li>Peru</li>
+    <li>UK</li>
+</ul>
+
+<div class="step">
+Tap <strong>Region</strong> → Select countries → Confirm.
+</div>
+
+<div class="warning">
+Enabling unnecessary regions may cause false redaction.
+</div>
+
+<hr>
+
+<!-- Undo Redo -->
+
+<h2>Undo & Redo</h2>
+
+<ul>
+    <li><strong>Undo</strong>: Cancel last action</li>
+    <li><strong>Redo</strong>: Restore canceled action</li>
+</ul>
+
+<div class="tip">
+Undo/Redo only applies to manual redactions.
+</div>
+
+<hr>
+
+<!-- Privacy -->
+
+<h2>Privacy & Security</h2>
+
+<ul>
+    <li>All processing is done locally</li>
+    <li>No files are uploaded</li>
+    <li>No data is collected</li>
+    <li>Temporary files are deleted</li>
+</ul>
+
+<hr>
+
+<!-- Contact -->
+
+<h2>Contact Us</h2>
+
+<div class="contact-box">
+
+<p><strong>Email Support</strong></p>
+
+<p>
+<a href="mailto:tkr_1203@outlook.com">
+tkr_1203@outlook.com
+</a>
+</p>
+
+<p>
+We usually respond within 24–48 hours.
+</p>
+
+</div>
+
+<hr>
+
+<!-- FAQ -->
+
+<h2>Frequently Asked Questions</h2>
+
+<h3>Why can't I open a PDF?</h3>
+<p>
+Please make sure the file is not corrupted
+and you are using the latest version.
+</p>
+
+<h3>Does RedactPDF upload my files?</h3>
+<p>
+No. All processing is done locally.
+</p>
+
+<h3>Can I recover redacted content?</h3>
+<p>
+No. Once exported, content cannot be recovered.
+</p>
+
+<h3>Why is nothing detected?</h3>
+<p>
+Some PDFs are scanned images.
+Please use manual mode.
+</p>
+    
+<h3>Why does manual redaction sometimes fail?</h3>
+<p>
+In Manual Mode, redaction works on a per-page basis.
+If your selection spans across multiple pages,
+the redaction may not be applied correctly.
+Please make sure to select within a single page.
+</p>
+    
+<hr>
+
+<!-- System -->
+
+<h2>System Requirements</h2>
+
+<ul>
+    <li>iOS 15.0 or later</li>
+    <li>iPhone & iPad supported</li>
+    <li>No internet required</li>
+</ul>
+
+<hr>
+
+<!-- Legal -->
+
+<h2>Legal</h2>
+
+<p>
+Please review our
+<a href="privacy.html">Privacy Policy</a>.
+</p>
+
+<footer>
+© 2026 RedactPDF. All rights reserved.
+</footer>
 
 </div>
 
